ProcesseurXML/xml.output
Grammaire

    0 $accept: document $end

    1 document: entete doctype elements

    2 elements: elements element
    3         | /* vide */

    4 element: INF NOM atts SUP content INF SLASH NOM SUP
    5        | INF NOM COLON NOM atts SUP content INF SLASH NOM SUP
    6        | INF NOM atts SLASH SUP
    7        | INF NOM COLON NOM atts SLASH SUP

    8 content: content element
    9        | content cdata
   10        | content DONNEES
   11        | content COMMENT
   12        | /* vide */

   13 entete: entete pi
   14       | /* vide */

   15 doctype: DOCTYPE NOM NOM valeurs SUP
   16        | /* vide */

   17 valeurs: valeurs VALEUR
   18        | /* vide */

   19 pi: INFSPECIAL NOM atts SUPSPECIAL
   20   | INFSPECIAL NOM COLON NOM atts SUPSPECIAL

   21 atts: atts att
   22     | /* vide */

   23 att: NOM EGAL VALEUR
   24    | NOM COLON NOM EGAL VALEUR

   25 cdata: CDATABEGIN CDATAEND


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
EGAL (258) 23 24
SLASH (259) 4 5 6 7
SUP (260) 4 5 6 7 15
SUPSPECIAL (261) 19 20
DOCTYPE (262) 15
COLON (263) 5 7 20 24
INFSPECIAL (264) 19 20
INF (265) 4 5 6 7
CDATABEGIN (266) 25
VALEUR (267) 17 23 24
DONNEES (268) 10
COMMENT (269) 11
NOM (270) 4 5 6 7 15 19 20 23 24
CDATAEND (271) 25


Non-terminaux, suivis des règles où ils apparaissent

$accept (17)
    à gauche: 0
document (18)
    à gauche: 1, à droite: 0
elements (19)
    à gauche: 2 3, à droite: 1 2
element (20)
    à gauche: 4 5 6 7, à droite: 2 8
content (21)
    à gauche: 8 9 10 11 12, à droite: 4 5 8 9 10 11
entete (22)
    à gauche: 13 14, à droite: 1 13
doctype (23)
    à gauche: 15 16, à droite: 1
valeurs (24)
    à gauche: 17 18, à droite: 15 17
pi (25)
    à gauche: 19 20, à droite: 13
atts (26)
    à gauche: 21 22, à droite: 4 5 6 7 19 20 21
att (27)
    à gauche: 23 24, à droite: 21
cdata (28)
    à gauche: 25, à droite: 9


état 0

    0 $accept: . document $end

    $défaut  réduction par utilisation de la règle 14 (entete)

    document  aller à l'état 1
    entete    aller à l'état 2


état 1

    0 $accept: document . $end

    $end  décalage et aller à l'état 3


état 2

    1 document: entete . doctype elements
   13 entete: entete . pi

    DOCTYPE     décalage et aller à l'état 4
    INFSPECIAL  décalage et aller à l'état 5

    $défaut  réduction par utilisation de la règle 16 (doctype)

    doctype  aller à l'état 6
    pi       aller à l'état 7


état 3

    0 $accept: document $end .

    $défaut  accepter


état 4

   15 doctype: DOCTYPE . NOM NOM valeurs SUP

    NOM  décalage et aller à l'état 8


état 5

   19 pi: INFSPECIAL . NOM atts SUPSPECIAL
   20   | INFSPECIAL . NOM COLON NOM atts SUPSPECIAL

    NOM  décalage et aller à l'état 9


état 6

    1 document: entete doctype . elements

    $défaut  réduction par utilisation de la règle 3 (elements)

    elements  aller à l'état 10


état 7

   13 entete: entete pi .

    $défaut  réduction par utilisation de la règle 13 (entete)


état 8

   15 doctype: DOCTYPE NOM . NOM valeurs SUP

    NOM  décalage et aller à l'état 11


état 9

   19 pi: INFSPECIAL NOM . atts SUPSPECIAL
   20   | INFSPECIAL NOM . COLON NOM atts SUPSPECIAL

    COLON  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 22 (atts)

    atts  aller à l'état 13


état 10

    1 document: entete doctype elements .
    2 elements: elements . element

    INF  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 1 (document)

    element  aller à l'état 15


état 11

   15 doctype: DOCTYPE NOM NOM . valeurs SUP

    $défaut  réduction par utilisation de la règle 18 (valeurs)

    valeurs  aller à l'état 16


état 12

   20 pi: INFSPECIAL NOM COLON . NOM atts SUPSPECIAL

    NOM  décalage et aller à l'état 17


état 13

   19 pi: INFSPECIAL NOM atts . SUPSPECIAL
   21 atts: atts . att

    SUPSPECIAL  décalage et aller à l'état 18
    NOM         décalage et aller à l'état 19

    att  aller à l'état 20


état 14

    4 element: INF . NOM atts SUP content INF SLASH NOM SUP
    5        | INF . NOM COLON NOM atts SUP content INF SLASH NOM SUP
    6        | INF . NOM atts SLASH SUP
    7        | INF . NOM COLON NOM atts SLASH SUP

    NOM  décalage et aller à l'état 21


état 15

    2 elements: elements element .

    $défaut  réduction par utilisation de la règle 2 (elements)


état 16

   15 doctype: DOCTYPE NOM NOM valeurs . SUP
   17 valeurs: valeurs . VALEUR

    SUP     décalage et aller à l'état 22
    VALEUR  décalage et aller à l'état 23


état 17

   20 pi: INFSPECIAL NOM COLON NOM . atts SUPSPECIAL

    $défaut  réduction par utilisation de la règle 22 (atts)

    atts  aller à l'état 24


état 18

   19 pi: INFSPECIAL NOM atts SUPSPECIAL .

    $défaut  réduction par utilisation de la règle 19 (pi)


état 19

   23 att: NOM . EGAL VALEUR
   24    | NOM . COLON NOM EGAL VALEUR

    EGAL   décalage et aller à l'état 25
    COLON  décalage et aller à l'état 26


état 20

   21 atts: atts att .

    $défaut  réduction par utilisation de la règle 21 (atts)


état 21

    4 element: INF NOM . atts SUP content INF SLASH NOM SUP
    5        | INF NOM . COLON NOM atts SUP content INF SLASH NOM SUP
    6        | INF NOM . atts SLASH SUP
    7        | INF NOM . COLON NOM atts SLASH SUP

    COLON  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 22 (atts)

    atts  aller à l'état 28


état 22

   15 doctype: DOCTYPE NOM NOM valeurs SUP .

    $défaut  réduction par utilisation de la règle 15 (doctype)


état 23

   17 valeurs: valeurs VALEUR .

    $défaut  réduction par utilisation de la règle 17 (valeurs)


état 24

   20 pi: INFSPECIAL NOM COLON NOM atts . SUPSPECIAL
   21 atts: atts . att

    SUPSPECIAL  décalage et aller à l'état 29
    NOM         décalage et aller à l'état 19

    att  aller à l'état 20


état 25

   23 att: NOM EGAL . VALEUR

    VALEUR  décalage et aller à l'état 30


état 26

   24 att: NOM COLON . NOM EGAL VALEUR

    NOM  décalage et aller à l'état 31


état 27

    5 element: INF NOM COLON . NOM atts SUP content INF SLASH NOM SUP
    7        | INF NOM COLON . NOM atts SLASH SUP

    NOM  décalage et aller à l'état 32


état 28

    4 element: INF NOM atts . SUP content INF SLASH NOM SUP
    6        | INF NOM atts . SLASH SUP
   21 atts: atts . att

    SLASH  décalage et aller à l'état 33
    SUP    décalage et aller à l'état 34
    NOM    décalage et aller à l'état 19

    att  aller à l'état 20


état 29

   20 pi: INFSPECIAL NOM COLON NOM atts SUPSPECIAL .

    $défaut  réduction par utilisation de la règle 20 (pi)


état 30

   23 att: NOM EGAL VALEUR .

    $défaut  réduction par utilisation de la règle 23 (att)


état 31

   24 att: NOM COLON NOM . EGAL VALEUR

    EGAL  décalage et aller à l'état 35


état 32

    5 element: INF NOM COLON NOM . atts SUP content INF SLASH NOM SUP
    7        | INF NOM COLON NOM . atts SLASH SUP

    $défaut  réduction par utilisation de la règle 22 (atts)

    atts  aller à l'état 36


état 33

    6 element: INF NOM atts SLASH . SUP

    SUP  décalage et aller à l'état 37


état 34

    4 element: INF NOM atts SUP . content INF SLASH NOM SUP

    $défaut  réduction par utilisation de la règle 12 (content)

    content  aller à l'état 38


état 35

   24 att: NOM COLON NOM EGAL . VALEUR

    VALEUR  décalage et aller à l'état 39


état 36

    5 element: INF NOM COLON NOM atts . SUP content INF SLASH NOM SUP
    7        | INF NOM COLON NOM atts . SLASH SUP
   21 atts: atts . att

    SLASH  décalage et aller à l'état 40
    SUP    décalage et aller à l'état 41
    NOM    décalage et aller à l'état 19

    att  aller à l'état 20


état 37

    6 element: INF NOM atts SLASH SUP .

    $défaut  réduction par utilisation de la règle 6 (element)


état 38

    4 element: INF NOM atts SUP content . INF SLASH NOM SUP
    8 content: content . element
    9        | content . cdata
   10        | content . DONNEES
   11        | content . COMMENT

    INF         décalage et aller à l'état 42
    CDATABEGIN  décalage et aller à l'état 43
    DONNEES     décalage et aller à l'état 44
    COMMENT     décalage et aller à l'état 45

    element  aller à l'état 46
    cdata    aller à l'état 47


état 39

   24 att: NOM COLON NOM EGAL VALEUR .

    $défaut  réduction par utilisation de la règle 24 (att)


état 40

    7 element: INF NOM COLON NOM atts SLASH . SUP

    SUP  décalage et aller à l'état 48


état 41

    5 element: INF NOM COLON NOM atts SUP . content INF SLASH NOM SUP

    $défaut  réduction par utilisation de la règle 12 (content)

    content  aller à l'état 49


état 42

    4 element: INF . NOM atts SUP content INF SLASH NOM SUP
    4        | INF NOM atts SUP content INF . SLASH NOM SUP
    5        | INF . NOM COLON NOM atts SUP content INF SLASH NOM SUP
    6        | INF . NOM atts SLASH SUP
    7        | INF . NOM COLON NOM atts SLASH SUP

    SLASH  décalage et aller à l'état 50
    NOM    décalage et aller à l'état 21


état 43

   25 cdata: CDATABEGIN . CDATAEND

    CDATAEND  décalage et aller à l'état 51


état 44

   10 content: content DONNEES .

    $défaut  réduction par utilisation de la règle 10 (content)


état 45

   11 content: content COMMENT .

    $défaut  réduction par utilisation de la règle 11 (content)


état 46

    8 content: content element .

    $défaut  réduction par utilisation de la règle 8 (content)


état 47

    9 content: content cdata .

    $défaut  réduction par utilisation de la règle 9 (content)


état 48

    7 element: INF NOM COLON NOM atts SLASH SUP .

    $défaut  réduction par utilisation de la règle 7 (element)


état 49

    5 element: INF NOM COLON NOM atts SUP content . INF SLASH NOM SUP
    8 content: content . element
    9        | content . cdata
   10        | content . DONNEES
   11        | content . COMMENT

    INF         décalage et aller à l'état 52
    CDATABEGIN  décalage et aller à l'état 43
    DONNEES     décalage et aller à l'état 44
    COMMENT     décalage et aller à l'état 45

    element  aller à l'état 46
    cdata    aller à l'état 47


état 50

    4 element: INF NOM atts SUP content INF SLASH . NOM SUP

    NOM  décalage et aller à l'état 53


état 51

   25 cdata: CDATABEGIN CDATAEND .

    $défaut  réduction par utilisation de la règle 25 (cdata)


état 52

    4 element: INF . NOM atts SUP content INF SLASH NOM SUP
    5        | INF . NOM COLON NOM atts SUP content INF SLASH NOM SUP
    5        | INF NOM COLON NOM atts SUP content INF . SLASH NOM SUP
    6        | INF . NOM atts SLASH SUP
    7        | INF . NOM COLON NOM atts SLASH SUP

    SLASH  décalage et aller à l'état 54
    NOM    décalage et aller à l'état 21


état 53

    4 element: INF NOM atts SUP content INF SLASH NOM . SUP

    SUP  décalage et aller à l'état 55


état 54

    5 element: INF NOM COLON NOM atts SUP content INF SLASH . NOM SUP

    NOM  décalage et aller à l'état 56


état 55

    4 element: INF NOM atts SUP content INF SLASH NOM SUP .

    $défaut  réduction par utilisation de la règle 4 (element)


état 56

    5 element: INF NOM COLON NOM atts SUP content INF SLASH NOM . SUP

    SUP  décalage et aller à l'état 57


état 57

    5 element: INF NOM COLON NOM atts SUP content INF SLASH NOM SUP .

    $défaut  réduction par utilisation de la règle 5 (element)
